src/scss/styles.scss
/* ... */
html{
  scroll-behavior: smooth;
}

.scroll-to-top{
  display: block;
  width: 44px;
  height: 44px;
  padding: 0;
  position: fixed;
  background: url('assets/bg/scroll-to-top.svg') no-repeat center;
  background-size: contain;
  bottom: 2.25rem;
  right: 2.25rem;
  z-index: 20;
  @media (max-width: 480px){
    width: 36px;
    height: 36px;
    bottom: 1.25rem;
    right: calc(1.25rem - 18px);
  }
}

section.big-cta{
  article{
    background-image: url('assets/bg/star-points-yellow.png');
    background-repeat: no-repeat;
    background-position: left bottom;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: relative;
    z-index: 2;
    a.btn{
      margin-bottom: 1rem;
    }
    @media (max-width: 600px){
      padding-top: 3rem;
      padding-bottom: 6rem;
    }
  }
}

/* Home page */

.home{
  .scroll-to-top{
    display: none;
  }
  @media(min-width: 880px){
    header nav{
      .main-menu{
        margin-left: auto;
        border-right: 1px solid var(--blue2);
        margin-right: 1rem;
        padding-right: 1rem;
      }
      .site-64{
        margin-left: 0;
        span{
          font-size: .85rem;
        }
      }
    }
  }
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  header, main{
    width: 100%;
  }

  main, section, article{
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      padding: 0;
  }
  section{
    position: relative;
    overflow: hidden;
    .superheros{
      position: absolute;
      z-index: 5;
      transform: translate(-3.5rem, -4.55rem);
      background-image: url('assets/bg/superheros-noshadow.svg');
    }
  }
  @media(min-width: 1175px){
    section{
      overflow: visible;
      .superheros{
        transform: translate(-3.5rem, -6.6rem);
      }
    }
  }
  article{
    max-width: 100%;
    padding: 0 1.25rem;;
    margin: 0;
    .slider{
      position: relative;
      flex-grow: 1;
    }
    picture{
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      //transform: translateX(-50%);
      min-height: 100%;
      width: 100%;
      z-index: 0;
      display: flex;
      img{
        width: 100%;
        object-fit: cover;
      }
    }
    @keyframes animatePictureA{
      0%{
        opacity: 1;
      }
      31%{
        opacity: 1;
      }
      35%{
        opacity: 0;
      }
      96%{
        opacity: 0;
      }
      100%{
        opacity: 1;
      }
    }
    picture:nth-child(1){
      animation-name: animatePictureA;
      animation-duration: 12s;
      animation-iteration-count: infinite;
      z-index: 2;
    }
    @keyframes animatePictureB{
      0%{
        opacity: 0;
      }
      31%{
        opacity: 0;
      }
      35%{
        opacity: 1;
      }
      64%{
        opacity: 1;
      }
      68%{
        opacity: 0;
      }
      100%{
        opacity: 0;
      }
    }
    picture:nth-child(2){
      animation-name: animatePictureB;
      animation-duration: 12s;
      animation-iteration-count: infinite;
      z-index: 1;
    }
    h1{
      margin-bottom: 0;
      position: absolute;
      z-index: 4;
      text-align: right;
      right: 0;
      bottom: 2rem;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      span{
        background-color: var(--green3);
        padding: .75em 1rem;
        letter-spacing: .05em;
        width: 320px;
        font-size: .9rem;

        &:first-of-type{
          width: auto;
        }
        &:last-of-type{
          background-color: var(--white);
          color: var(--purple2);
          font-weight: 700;
          font-size: 1.05rem;
        }
      }
    }
  }
}
/* ... */

